--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Technikaz</title>
-    <meta name="description" content="Technikaz Best Blogging Website 2025" />
+    <title>Technikaz - Latest Tech News, Reviews & Gadget Comparisons</title>
+    <meta name="description" content="Stay updated with the latest technology news, in-depth reviews, gaming updates, and expert gadget comparisons. Your trusted source for tech insights." />
     <meta name="author" content="Technikaz" />
+    <meta name="keywords" content="tech news, gadget reviews, gaming, mobile phones, laptops, technology blog" />
+    
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Technikaz - Latest Tech News & Reviews" />
+    <meta property="og:description" content="Stay updated with the latest technology news, in-depth reviews, gaming updates, and expert gadget comparisons." />
     <meta property="og:image" content="/og-image.png" />
+    <meta property="og:type" content="website" />
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Technikaz - Latest Tech News & Reviews" />
+    <meta name="twitter:description" content="Your trusted source for tech news, reviews & comparisons" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
